tests/snapshots/file@base@nil@literal.lox.snap
---
source: tests/common/mod.rs
description: "print nil; // expect: nil\n"
input_file: crafting_interpreters_test_files/nil/literal.lox
---
OUT: 
nil

===
ERR:
