tests/snapshots/file@base@operator@add_bool_num.lox.snap
---
source: tests/common/mod.rs
description: "true + 123; // expect runtime error: Operands must be two numbers or two strings.\n"
input_file: crafting_interpreters_test_files/operator/add_bool_num.lox
---
OUT: 

===
ERR: 
  × invalid operands, expected two numbers or string
   ╭────
 1 │ true + 123; // expect runtime error: Operands must be two numbers or two strings.
   ·      ┬
   ·      ╰── here
   ╰────
